--- a/Web_Dev/Tic_TAC_TOE_Game_Project/Main.html
+++ b/Web_Dev/Tic_TAC_TOE_Game_Project/Main.html
@@ -21,23 +21,23 @@
         </div>  
         <table align="center">
             <tr>
-                <td>x</td>
+                <td>X</td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-                <td></td>
+                <td>X</td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td>X</td>
             </tr>
         </table>
         <div align="center" class="lower">
-        <button id='Random_Button' type="button" class="btn btn-secondary btn-lg">Click Here for ranomised choice</button>
+        <button id='Random_Button' type="button" class="btn btn-secondary btn-lg">Click Here for A Ranomised Choice</button>
         </div>
     </div>
 
